# StrangeAttractors

./: .gitignore  .pre-commit-config.yaml  README.md  app.config.ts  app.vue  bun.lockb  nuxt.config.ts  package.json
.github/: renovate.json
.github/workflows/: deploy-docs.yml  test.yml
attractors/: Cargo.toml  README.md
attractors/src/: lib.rs  utils.rs
components/: Axes.vue  Camera.vue  Canvas.vue  Sidebar.vue
components/OgImage/: Gradient.vue
composables/: useStates.ts
utils/: AttractorFactory.ts  RK4.ts  helper.ts  typeAttractor.ts  typeVec.ts  types.ts
