[package]
name = "attractors"
version = "0.1.0"
authors = ["TeddyHuang-00 <huang_nan_2019@pku.edu.cn>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
rand = "0.10.0"
getrandom = { version = "0.2.14", features = ["js"] }
strum = { version = "0.27.0", features = ["derive", "strum_macros"] }

[dev-dependencies]
# wasm-bindgen-test = "0.3.41"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
